# Humanized_Book_With_Chabot

./: .dockerignore  .gitignore  .npmignore  README.md  docusaurus.config.ts  package-lock.json  package.json
.specify/memory/: constitution.md
.specify/physical-ai-rag-chatbot/: main.py
docs/: capstone.md  glossary.md  hardware.md  intro.md  main.py  module1-ros2.md  module2-gazebo.md  module3-isaac.md  module4-vla.md  references.md  roadmap.md  software.md
examples/capstone/: action_server_node.py  llm_planner_node.py  perception_node.py  simulation_launch.launch  voice_command_node.py
examples/gazebo_sim/: humanoid.sdf  launch_sensor_data.launch  sensor_logger_node.py
examples/isaac_pipeline/: dataset_generator.py  inference_node.py  train_vision_model.py
examples/module1_ros2/: smoke_test.py  (+3 more)
physical-ai-rag-chatbot/: README.md  pyproject.toml
physical-ai-rag-chatbot/backend/: main.py
physical-ai-rag-chatbot/backend/db/: models.py
physical-ai-rag-chatbot/backend/services/: embedding_service.py  retrieval_service.py
physical-ai-rag-chatbot/docs/: deployment.md
physical-ai-rag-chatbot/infra/: backend.Dockerfile  deploy_backend.sh
physical-ai-rag-chatbot/scripts/: config.py  requirements.txt
physical-ai-rag-chatbot/tests/backend/: test_api.py  test_db.py
physical-ai-rag-chatbot/tests/e2e/: test_chatbot.py
physical-ai-rag-chatbot/web/: index.html  package.json
physical-ai-rag-chatbot/web/src/components/: ChatInterface.jsx
physical-ai-rag-chatbot/web/src/pages/: index.jsx
physical-ai-rag-chatbot/web/src/utils/: selection_detector.jsx
(+75 files in other folders)
